crates/flir-cli/tests/integration/snapshots/integration__rules__one_non_existing_ignored_rule.snap
---
source: crates/flir-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--ignore-rules\").arg(\"foo\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
flir failed
  Cause: Unknown rules in `--ignore-rules`: foo

----- args -----
check . --ignore-rules foo
