crates/flir-cli/tests/integration/snapshots/integration__rules__one_non_existing_selected_rule.snap
---
source: crates/flir-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).arg(\".\").arg(\"--select-rules\").arg(\"foo\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Warning: No R files found under the given path(s).

----- stderr -----

----- args -----
. --select-rules foo
