crates/flir-cli/tests/integration/snapshots/integration__rules__selected_and_ignored.snap
---
source: crates/flir-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select-rules\").arg(\"any_is_na\").arg(\"--ignore-rules\").arg(\"any_is_na\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --select-rules any_is_na --ignore-rules any_is_na
